--- a/src/index.css
+++ b/src/index.css
@@ -2,44 +2,43 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer base{
-  html{
+@layer base {
+  html {
     font-family: Inter, system-ui, sans-serif;
   }
 }
 @layer utilities {
   .shadow-text-orange {
     text-shadow: 4px 2px 1px rgba(255, 123, 41, 0.8),
-    5px 5px 6px rgba(0, 0, 0, 0.5);
+      5px 5px 6px rgba(0, 0, 0, 0.5);
   }
 }
-body{
-  background-color: #FFFCFC;
+body {
+  background-color: #fffcfc;
   overflow-x: hidden;
-  overflow-y:scroll
+  overflow-y: scroll;
 }
 
-
 ::-webkit-scrollbar {
-  width: 10px; 
+  width: 10px;
   margin-right: 10px;
 }
 
 ::-webkit-scrollbar-track {
-  background: none; 
+  background: none;
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #D9D9D9; 
-  border-radius: 30px; 
+  background-color: #d9d9d9;
+  border-radius: 30px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background-color: #939393; 
+  background-color: #939393;
 }
 
-input[type=number]::-webkit-inner-spin-button,
-input[type=number]::-webkit-outer-spin-button {
+input[type='number']::-webkit-inner-spin-button,
+input[type='number']::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0; /* Remova a margem para navegadores que adicionam margem por padrão */
 }
